force-app/main/default/objects/Account_Contract_Clause__c/fields/Account_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Country__c</fullName>
    <formula>Account_Contract__r.Account__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Country</label>
    <type>Text</type>
</CustomField>