force-app/main/default/objects/Account_Contract_Clause__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Use to store the description for Account Contract Clause record</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>