force-app/main/default/objects/Account_Contract_Clause__c/fields/Parent_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Id__c</fullName>
    <formula>CASESAFEID(Account_Contract__r.Account__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Id</label>
    <type>Text</type>
</CustomField>